--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Introduction</title>
+    <link rel="stylesheet" href="./Styles.css">
 </head>
 <body>
     <h1>Fuck You</h1>
