Linked script to HTML

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git Introduction</title>
-    <link rel="stylesheet" href="./Styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./Styles.css" />
+  </head>
+  <body>
     <h1>Fuck You</h1>
-</body>
+  </body>
 </html>
+<script src="./Script.js"></script>
